fix: image didn't use js and css because of z-index

--- a/src/app/static/css/album.css
+++ b/src/app/static/css/album.css
@@ -11,7 +11,8 @@ img{
     cursor: pointer;
     width: 300px;
     height: 300px;
-    z-index: -1;
+    position: relative;
+    z-index: 1;
 }
 
 .remove-photo{
