--- a/src/app/static/css/footer.css
+++ b/src/app/static/css/footer.css
@@ -5,6 +5,7 @@ footer{
     background-color: blueviolet;
     color: white;
     padding: 10px;
+    z-index: 2;
 }
 
 .copyright{
