--- a/src/app/static/css/header.css
+++ b/src/app/static/css/header.css
@@ -3,9 +3,9 @@ header{
   background-color: #7209b7;
   width: 100%;
   left: 0;
-  right: 0;
   top: 0;
   padding: 1em;
+  z-index: 2;
 }
 
 .menu {
